<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/left_brand"
            android:padding="10dp"
            android:scaleType="centerCrop"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_info"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView3"
            android:textColor="@color/set_font_num1"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/set_split_line"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head"
            android:layout_centerInParent="true"
            android:drawableTop="@drawable/circular"
            android:gravity="center"
            android:drawablePadding="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/set_font_num1"
            />
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/set_split_line"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        >
        <TextView
            android:textColor="@color/set_font_num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingLeft="18dp"
            android:textSize="15sp"
            />


        <EditText
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#fff"
            android:textColorHint="@color/set_font_num2"
            android:textSize="14sp"
            android:hint="还是空的，快去设置个性化名字吧"
            android:paddingLeft="10dp"
            android:textCursorDrawable="@null"

            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/set_split_line"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        >
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="性别"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingLeft="18dp"
            android:textSize="15sp"
            android:textColor="@color/set_font_num1"
            />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man"
            android:gravity="center_vertical"
            android:layout_marginRight="18dp"
            android:background="#fff"
            android:textColor="@color/set_font_num1"
           />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/set_split_line"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        >
        <TextView
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingLeft="18dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_seting"
            android:textColor="@color/set_font_num1"
            />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/right"
            android:layout_gravity="center_vertical"
            android:paddingRight="18dp"
            android:id="@+id/imageView" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/set_split_line"
        />



</LinearLayout>
