<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sb="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fefefe"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/left_brand"
            android:padding="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interchangedable"
            android:textSize="18dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/set_font_num1"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/set_split_line"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shengliuliang"
            android:paddingLeft="18dp"
            android:paddingBottom="13dp"
            android:paddingTop="13dp"
            android:textSize="13dp"
            android:textColor="@color/set_font_num1"
            android:layout_gravity="center_vertical"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <com.men_cloths.mainContent.SwitchButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            sb:state="true"
            android:id="@+id/button"
            />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/set_split_line"

        />



    <!--*******************************************-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ding_wei_server"
            android:paddingLeft="18dp"
            android:paddingBottom="13dp"
            android:paddingTop="13dp"
            android:textColor="@color/set_font_num1"
            android:layout_gravity="center_vertical"
            android:textSize="13dp"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <com.men_cloths.mainContent.SwitchButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            sb:state="false"
            android:id="@+id/button_"
            />


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/set_split_line"
        />



</LinearLayout>
